--- a/BlogposterCMS/apps/designer/assets/scss/designer.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/designer.scss
@@ -1,5 +1,7 @@
+@use 'variables';
 @use 'header';
 @use 'sidebar';
+@use 'toolbar';
 @use 'widget-controls';
 @use 'widget-options-menu';
 @use 'widget-action-bar';
